WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185838
Web Automation: always return an empty cookie list if document.cookieURL() is empty
https://bugs.webkit.org/show_bug.cgi?id=185838
Summary
Web Automation: always return an empty cookie list if document.cookieURL() is...
Blaze Burg
Reported
2018-05-21 14:15:12 PDT
YMMV if trying to fetch cookies from a null or empty URL, but it crashes on Mac.
Attachments
Patch
(1.96 KB, patch)
2018-05-21 14:20 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-05-21 14:15:43 PDT
<
rdar://problem/37737526
>
Blaze Burg
Comment 2
2018-05-21 14:20:03 PDT
Created
attachment 340890
[details]
Patch
Daniel Bates
Comment 3
2018-05-21 15:06:47 PDT
Comment on
attachment 340890
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=340890&action=review
> Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:754 > + if (!document.cookieURL().isEmpty())
It would good to understand how document's cookie URL can be empty given that the document has an associated frame. I haven't looked at the radar. Maybe this happens for a newly opened window?
WebKit Commit Bot
Comment 4
2018-05-21 15:10:41 PDT
Comment on
attachment 340890
[details]
Patch Clearing flags on attachment: 340890 Committed
r232031
: <
https://trac.webkit.org/changeset/232031
>
WebKit Commit Bot
Comment 5
2018-05-21 15:10:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug