Web Automation: always return an empty cookie list if document.cookieURL() is empty https://bugs.webkit.org/show_bug.cgi?id=185838 <rdar://problem/37737526>

Reviewed by Tim Horton.

* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::getCookiesForFrame):
This crashes in CFNetwork code because an empty cookie URL is not a valid input.
Just return an empty list since there couldn't be any cookies returned.


Canonical link: https://commits.webkit.org/201290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232031 268f45cc-cd09-0410-ab3c-d52691b4dbfc